# raid-toolkit-sdk

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.jsonc  .prettierrc  BuildTargets.props  CHANGES.md  CONTRIBUTING.md  DEVELOPERS.md  DOCUMENTATION_REQUIRED.md  Directory.Build.props  NITTYGRITTY.md  README.md  SDK-CI.sln  SDK-dotnet.sln  SDK.sln  TODO  ThirdPartyNotice.txt  UPGRADE_2.0.md  UPGRADE_3.0.md  buildext.bat  github-release-sample-response.json  package.json  tsconfig.json  version.json
.github/: release.yml
.github/workflows/: app-publish.yml  app-publish.yml.disabled  buddy-build.yml  buddy-publish.yml  changelog.yml  dotnet-desktop.yml  npm-publish.yml  nuget-publish.yml  pypi-publish.yml
Application/Raid.Toolkit/: Form1.cs  Program.cs  Raid.Toolkit.csproj
Extensions/Raid.Toolkit.Extension.Account/: Account.csproj  AccountExtension.cs
SDK/Client/: ApiBase.cs  Client.csproj  PromiseStore.cs  Raid.Client.nuspec  RaidToolkitClient.cs  pack.bat  publish.bat  version.json
SDK/Common/: Common.csproj  RegistrySettings.cs
SDK/DataModel/: Account.cs  (+4 more)
Tests/: package.json
assets/: AppIcon-base.pdn  AppIcon-staged-v2.pdn  AppIcon-staged.pdn
configuration/: appsettings.json
scripts/: Deferred.ts  NugetVersionLookup.ts  RegenerateTPN.bat  Toast.ts  build.ts  bump-nuget-versions.js  bump-nuget-versions.ts  cli.ts  il2cppdumperlicense.txt  nuget-version-lookup.js  options.ts
src/ClientSDK/Python/: LICENSE  README.md  setup.cfg
src/ClientSDK/Python/src/raidtoolkit/: Account.py  PromiseStore.py  RaidToolkit.py  RealtimeApi.py  __init__.py
(+1287 files in other folders)
