[metadata]
name = raidtoolkit
version = 0.1.0
author = dnchattan
author_email = dnchattan@gmail.com
description = Client for RaidToolkit API access
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raid-toolkit/raid-toolkit-sdk
project_urls =
    Bug Tracker = https://github.com/raid-toolkit/raid-toolkit-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src